# turtle-wow

./: README.md  original_readme.txt
Dumps/Source Code/16 - Development_server/api_ext_logs/dep/re2/: CMakeLists.txt
Dumps/Source Code/16 - Development_server/patch_1171/dep/dpp/: CMakeLists.txt
Dumps/Source Code/16 - Development_server/patch_1171/dep/dpp/dpp/: appcommand.h  message.h
Dumps/Source Code/16 - Development_server/patch_1171/src/shared/: CMakeLists.txt  Common.h  Log.cpp  Log.h  PerfStats.h  ThreadPool.h  Timer.cpp  Timer.h  Util.cpp  Util.h  httplib.h
Dumps/Source Code/16 - Development_server/patch_1171/src/shared/Config/: Config.cpp
Dumps/Source Code/16 - Development_server/patch_1171/src/shared/Database/: AutoUpdater.cpp  DatabaseEnv.h  DatabaseMysql.cpp  QueryResultMysql.h  SqlOperations.cpp  SqlPreparedStatement.h
Dumps/Source Code/16 - Development_server/patch_1171/src/shared/DiscordBot/: AuthManager.cpp  AuthManager.hpp  BaseCommandHandler.cpp  Bot.hpp  toojpeg.hpp
Dumps/Source Code/16 - Development_server/patch_1171/tools/TurtleLauncherBackend/: CMakeLists.txt
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/: CMakeLists.txt  ScriptLoader.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/battlegrounds/: battleground.cpp  battleground_sunnyglade.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/black_morass/: black_morass.h  black_morass_trash.cpp  instance_black_morass.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/blackrock_depths/: blackrock_depths.cpp  boss_tomb_of_seven.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/blackrock_spire/: boss_mother_smolderweb.cpp  boss_overlord_wyrmthalak.cpp  boss_pyroguard_emberseer.cpp  boss_quartermaster_zigris.cpp  boss_urok.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/blackwing_lair/: blackwing_lair.h  boss_firemaw.cpp  boss_vaelastrasz.cpp  boss_victor_nefarius.cpp  instance_blackwing_lair.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/crescent_grove/: instance_crescent_grove.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/dire_maul/: dreadsteed_ritual.cpp  npc_ecorcefer.cpp  npc_pusillin.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/emerald_sanctum/: emerald_sanctum.h
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/gilneas_city/: boss_celia.cpp  boss_lord_mortimer.cpp  instance_gilneas_city.cpp  instance_gilneas_city.h
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/hateforge_quarry/: boss_bargul_blackhammer.cpp  boss_hatereaver_annhilator.cpp  hateforge_quarry_trash.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/lower_karazhan_halls/: boss_brood_queen_araxxna.cpp  lower_karazhan_halls.h
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/maraudon/: boss_celebras_the_cursed.cpp  boss_noxxion.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/molten_core/: boss_baron_geddon.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/naxxramas/: boss_anubrekhan.cpp  boss_four_horsemen.cpp  boss_gothik.cpp  boss_heigan.cpp  boss_kelthuzad.cpp  boss_patchwerk.cpp  boss_razuvious.cpp  naxxramas.h
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/razorfen_kraul/: razorfen_kraul.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/ruins_of_ahnqiraj/: boss_moam.cpp  boss_ossirian.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/scarlet_citadel/: trashbosses_scarlet_citadel.cpp  trashmobs_scarlet_citadel.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/scholomance/: boss_doctor_theolen_krastinov.cpp  boss_instructor_malicia.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/stormwind_vaults/: boss_thamgrarr.cpp  boss_volkan_cruelblade.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/stratholme/: boss_nerubenkan.cpp  instance_stratholme.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/temple_of_ahnqiraj/: boss_fankriss.cpp  boss_sartura.cpp  boss_skeram.cpp  temple_of_ahnqiraj.h
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/upper_karazhan_halls/: boss_anomalus.cpp  boss_echo_of_medivh.cpp  boss_incantagos.cpp  boss_keeper_gnarlmoon.cpp  boss_kings_council.cpp  boss_kruul.cpp  boss_sanv_tasdal.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/wailing_caverns/: wailing_caverns.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/zulfarrak/: zulfarrak.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/dungeons/zulgurub/: boss_grilek.cpp  boss_hakkar.cpp  boss_jindo.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/events/: boss_ostarius.h  boss_pompa.cpp  boss_rares.cpp  boss_snowball.cpp  boss_taerar.cpp  event_mirage_raceway.cpp  event_wareffort.cpp  quest_stormwind_rendezvous.cpp  quest_stormwind_rendezvous.h
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/miscellaneous/: feature_gardening.cpp  feature_transmog.h  jewelcrafting.cpp  npc_loothelper.cpp  random_scripts_0.cpp  random_scripts_1.cpp  random_scripts_2.cpp  random_scripts_3.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/world/: alahthalas.cpp  burning_steppes.cpp  durotar.cpp  dustwallow_marsh.cpp  feralas.cpp  hinterlands.cpp  loch_modan.cpp  moonglade.cpp  silithus.cpp  stonetalon_mountains.cpp  tanaris.cpp  thunder_bluff.cpp
Dumps/Source Code/16 - Development_server/patch_1172/src/scripts/world/silithus/field_duty_alliance/: defines.h  npc_arcanist_nozzlespring.cpp  npc_arcanist_nozzlespring.h  npc_captain_blackanvil.cpp  npc_hivezora_abomination.cpp  (+2 more)
(+5136 files in other folders)
